# genshin-wiki-fetcher

./: Cargo.toml
.github/workflows/: build.yaml  reformat.yaml
src/: api.rs  constants.rs  data_structures.rs  errors.rs  logging.rs  main.rs  utils.rs
