[package]
name = "wiki_update"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } # Corrected line
serde = { version = "1", features = ["derive"] }

serde_json = "1"
simd-json = "0.13"
scraper = "0.19"
regex = "1"
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

colored = "2"
thiserror = "1"
once_cell = "1"
futures = "0.3"
url = "2"
async-recursion = "1"
fs_extra = "1.3"
chrono = { version = "0.4", features = ["serde"] }

bytes = "1"